--- a/index.html
+++ b/index.html
@@ -46,8 +46,15 @@
                 <h3>
                     <a href="HayekOakeshott.html">
                     Hayek and Oakeshott on Rationalism
+                    </a>
                 </h3>
 
+                <h3>
+                    <a
+                        href="https://fee.org/articles/michael-oakeshott-on-rationalism-in-politics/">
+                    Michael Oakeshott on Rationalism in Politics
+                    </a>
+                </h3>
                 <br>
                 <hr>
                 <h2>
