--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
                         href="https://www.amazon.com/Oakeshott-America-British-Idealist-Studies/dp/1845403134/ref=sr_1_fkmr0_1?ie=UTF8&qid=1477533017&sr=8-1-fkmr0&keywords=Oakeshott+on+Rome+and+America">
                         Oakeshott on Rome and America at Amazon
                     </a>
+                    <br>
+                    <br>
+                    <a
+                        href="http://www.theamericanconservative.com/articles/oakeshott-vs-america-112/">
+                        Oakeshott Versus America
+                    </a>
+                    <br>
+                    <br>
+                    <a
+                        href="http://www.libertylawsite.org/book-review/oakeshott-and-the-american-founding/">
+                        Oakeshott and the American Founding
+                    </a>
                 </p>
             </div>
 
