--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                         href="http://www.libertylawsite.org/book-review/oakeshott-and-the-american-founding/">
                         Oakeshott and the American Founding
                     </a>
+                    <br>
+                    <br>
+                    <a href="http://philpapers.org/rec/CALWOF">
+                        Winch on Following a Rule
+                    </a>
                 </p>
             </div>
 
