Updated style sheet.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
                     Michael Oakeshott on Rationalism in Politics
                     </a>
                 </h3>
+
+                <h3>
+                    <a href="WinchOnOakeshott.html">
+                    Winch on Following a Rule
+                    </a>
+                </h3>
+
                 <br>
                 <hr>
                 <h2>
@@ -76,11 +83,6 @@
                     <a
                         href="http://www.libertylawsite.org/book-review/oakeshott-and-the-american-founding/">
                         Oakeshott and the American Founding
-                    </a>
-                    <br>
-                    <br>
-                    <a href="http://philpapers.org/rec/CALWOF">
-                        Winch on Following a Rule
                     </a>
                 </p>
             </div>
