Added Collingwood and Bosanquet quotes.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -166,7 +166,14 @@ Instead, rationalism for Oakeshott is the attempt to replace practical reason (p
 This passage from R. G. Collingwood expresses the idea philosophically about as well as I have seen:
 <br />
 <br />
-"The concept it's not something outside the world of sensuous experience: it is the very structure in order of that world itself... This is the point of view of concrete thought... Too abstract is to consider separately things that are inseparable: to think of the Universal, per instance, without reflecting that it is merely the universal of its particulars, and to assume that one can isolated in thought and to study it in this isolation. This assumption is an error." -- <i>Speculum Mentis</i> (1924)
+"The concept it's not something outside the world of sensuous experience:
+it is the very structure in order of that world itself...
+This is the point of view of concrete thought...
+Too abstract is to consider separately things that are inseparable:
+to think of the Universal, for instance, without reflecting that it is
+merely the universal of its particulars,
+and to assume that one can isolate it in thought and to 
+study it in this isolation. This assumption is an error." -- <i>Speculum Mentis</i> (1924)
 <br />
 <br />
 In shorter form, Bernard Bosanquet wrote: "the fullest universal of character and consciousness will embody itself in the finest and most specialized and unrepeatable responses to environment." -- <i>The Principle of Individuality and Value: The Gifford Lectures for 1911</i> (1927)
