Added Collingwood and Bosanquet quotes.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -170,7 +170,7 @@ This passage from R. G. Collingwood expresses the idea philosophically about as 
 it is the very structure in order of that world itself...
 This is the point of view of concrete thought...
 Too abstract is to consider separately things that are inseparable:
-to think of the Universal, for instance, without reflecting that it is
+to think of the universal, for instance, without reflecting that it is
 merely the universal of its particulars,
 and to assume that one can isolate it in thought and to 
 study it in this isolation. This assumption is an error." -- <i>Speculum Mentis</i> (1924)
