Editing text of HayekOakeshott.html

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -388,50 +388,54 @@ unrepeatable responses to environment."
 
 <p>
 
-Published in 1933, this book is primarily a bold and, by its time, quite
-unfashionable defense of philosophical idealism by the young Oakeshott. 
-In this work, Oakeshott contends that philosophy alone represents an attempt to
-grapple with 'experience without reservation or arrest' (1933: 4),
-a view he would later modify but never entirely abandon.1
-Other forms of human knowledge, such as science, history, and practice, are
-inherently incomplete approaches to understanding experience, as they are
-founded upon certain unquestioned presuppositions that are formulative for
-their particular 'world of ideas'. Such inherent conditionality renders those
-̳modes' of experience not only ultimately unsatisfactory as methods for
-grasping the 'totality of experience', but also categorically distinct, since
-each mode is constituted by its own peculiar presuppositions, meaning that no
-mode is in a position to direct the progress of understanding in any of the
-others. Especially relevant, for our purposes, is Oakeshott's contention that
-science has no authority over practice, a view that indicts the rationalists'
-dream of reorganizing and correcting the 'irrational' world of practice,
+Published in 1933, this book is a bold defense of philosophical idealism. 
+In it, Oakeshott argues that only philosophy represents 
+'experience without reservation or arrest' (1933: 4),
+a view he would modify in later works, but never entirely abandon.
+Other 'modes of experience,' such as science, history, and practice, are
+inherently partial forms of understanding, as they arise from
+particular presuppositions, which they leave unquestioned, that form
+these 'worlds of ideas'. This intrinsic conditionality means that these
+modes of experience are not only fall short of
+grappling with the 'totality of experience',
+but also makes them categorically distinct.
+Each mode is constituted by its own presuppositions, so that no
+mode is in a position to dictate the understanding achieved by any of the
+others. 
+For this paper, what is most relevant is Oakeshott's claim that
+science has no authority over practice.
+If Oakeshott is correct here, then the rationalists'
+dream of reorganizing and improving the 'irrational' world of practice,
 grounded in tradition, by applying abstract, scientific principles to everyday
-conduct as being guilty of categorical irrelevance. Science, per Oakeshott, is
-an 'attempt to find... a world of definite and demonstrable experience, one
+conduct, is guilty of categorical irrelevance. Science, as Oakeshott explains,
+is an 'attempt to find... a world of definite and demonstrable experience, one
 free from merely personal associations and independent of the idiosyncrasies of
 particular observers, an absolutely impersonal and stable world' (1933:
-169–170). As a consequence of its founding postulates, the 'concepts [of
-science] do not, in any sense, refer to the world of practice, to the world
+169–170). As such, the 'concepts [of science] do not, 
+in any sense, refer to the world of practice, to the world
 given in sensation [and therefore,] the generalizations which express their
 necessary relations cannot be taken to imply that any event or occurrence will
 invariably take place. The concepts do not refer to events;
-and the generalizations are not in respect of events' (1933: 183).2
+and the generalizations are not in respect of events' (1933: 183).
 <br>
 <br>
-The world of practice, on the other hand, is experience viewed precisely in
+The world of practice, on the other hand, experience is understood in
 terms of how a current state of affairs might be transformed into a future
-state seen as more satisfactory in the eyes of a specific agent. As such, 'a
+state understood to be more satisfactory to a specific agent. As such, 'a
 scientific idea must be transformed, taken out of the world of scientific
 experience, before it can establish itself in the world of practice' (1933:
-265). For example, an engineer in his work cannot simply use the laws of
-physics as they are provided to him by physicists;
+265). For example, an engineer in his work cannot simply employ the laws of
+physics as they are given to him by physicists;
 in trying to solve a
-practical problem like designing a satisfactory bridge, he must reformulate
-those laws in terms of concepts alien to physics, as he seeks not universal
-laws, but to determine, for instance,
-'Will this particular bridge, built as designed at this particular
+practical problem like designing a building, he must recast
+those laws in terms of concepts foreign to physics,
+as he seeks not universal laws, but to determine, for instance,
+'Will this particular building, built as designed at this particular
 location, provide an adequate safety margin for this particular predicted
-amount of traffic while meeting this particular cost constraint?' All of those
-specifics, the incorporation of which is crucial for any successful solution to
+earthquake level and these particular wind shears
+while meeting this particular cost constraint?' 
+Those specifics, the inclusion of which 
+is vital for any successful solution to
 the engineer's problem, are categorically excluded from properly scientific
 laws. In light of the divergent aims characterizing the modes of science and of
 practice, the scientist is no more in a position to dictate the course of
@@ -888,6 +892,5 @@ Taleb, Nassim Nicholas.
     <i>Antifragile: Things That Gain from Disorder</i>.
     New York: Random House, 2014.
 </p>
-<br>
 </body>
 </html>
