Working on Hayek-Oakeshott.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -77,7 +77,8 @@ Introduction
 
 
 <p>
-In the first half of the twentieth century, the rationalist tide had reached its high mark.
+In the first half of the twentieth century,
+the rationalist tide had reached its high mark.
 The arts, child rearing, and business management, so it was held, were to be 
 revolutionized according to rationalist precepts.
 In architecture and city planning, rationalism would sweep away that 
@@ -437,13 +438,13 @@ while meeting this particular cost constraint?'
 Those specifics, the inclusion of which 
 is vital for any successful solution to
 the engineer's problem, are categorically excluded from properly scientific
-laws. In light of the divergent aims characterizing the modes of science and of
+laws. Given the divergent aims characterizing the modes of science and of
 practice, the scientist is no more in a position to dictate the course of
 practical affairs according to his theoretical conclusions than is the
 practical person in a position to direct scientific research according to her
 personal ambitions. The relevance of this early conclusion of Oakeshott's to
 his later essays on rationalism is, I think, obvious, especially once it is
-recognized, as argued above, that the proper contrast class to rational
+recognized that the proper contrast class to rational
 politics is not traditional politics but practical politics.
 <br>
 <br>
@@ -467,18 +468,14 @@ events that is supportive of Oakeshott's, see Cartwright (1983).)
 As Oakeshott saw it, perhaps the most salient feature of the rationalist approach is
 the faith that every essential aspect of any human practice can be conveyed
 adequately by means of a 'guidebook' comprising explicitly stated rules,
-formalized technical procedures, and general, abstract principles. Such a
-belief implies that internalizing the 'correct' theoretical model of some
-subject is all that is required to achieve successful performances in that
-domain; indeed, it implies that in attending to any features of a practice,
-such as experienced participants' rules of thumb or tacit understandings about
-how to proceed, any features other than the theoretical principles that
-purportedly capture the essence of the activity in question, merely erect
-superstitious barriers thwarting the rational reformation of performances of
-that activity. What is necessary to be 'rational' is to approach any activity
+formalized technical procedures, and general, abstract principles. 
+The rationalist view is that arriving at the correct theory on some
+subject is all that is required to achieve successful performances in its
+domain; indeed, attending to any anything else, such as long-standing traditions,
+is a positive barrier to success in a field.
+What is necessary to be 'rational' is to approach any activity
 with a tabula rasa upon which the correct technique for that activity can be
-cleanly inscribed;
-as Oakeshott put it, in this view, rational conduct involves
+cleanly inscribed; as Oakeshott put it, in this view, rational conduct involves
 'a certain emptying of the mind, a conscious effort to get rid of preconceptions' (1991
 [1962]: 101).
 <br>
@@ -486,20 +483,31 @@ as Oakeshott put it, in this view, rational conduct involves
 Quite to the contrary of that understanding of the relationship between
 technical guidelines and tacit knowledge, Oakeshott argues that the
 rationalist, in awarding theory primacy over practice, has gotten things
-exactly backwards. Theoretical understanding, he contends, is always a
-by-product of practical know-how, and never its progenitor. In fact, he sees
-the parasitical dependence of theory upon practice as being so unavoidable that
+exactly backwards.
+
+Theoretical understanding is always a
+by-product of practical skill: we come to understand the general and abstract
+only through understanding the concrete and particular, i.e., the concrete
+universal.
+
+In fact, Oakeshott sees
+the dependence of theory upon practice as being so unavoidable that
 not only is the rationalist incapable of successful performances guided solely
-by a theoretical model of the activity to be performed, he is not even able to
-stick to his purported guidelines while performing the activity poorly;
-instead, he inevitably will fall back on some familiar but unacknowledged
-existing practice in trying to realize his abstract schema.6
+by a theoretical model of the activity to be performed, he is not able to
+stick to his purported guidelines at all:
+instead, he will fall back on some existing practice 
+instead of actually following the abstraction that supposedly guides his
+conduct.
+
+
 Oakeshott's contention, that the rationalist ideal of conduct guided entirely
 by explicitly adopted and provably justified 'principles' is absurd because it
 is impossible to achieve, is a close kin of Wittgenstein's insight that every
 attempt to follow correctly a set of formalized rules necessarily is grounded
 upon informal customs and practices that determine what it means to follow a
-rule 'correctly'. The formal rules cannot also embody their own 'correct'
+rule 'correctly'.
+
+The formal rules cannot also embody their own 'correct'
 interpretation because any effort to incorporate that interpretation into the
 first-level rules would create a set of 'meta-rules', themselves requiring
 meta- meta-rules to guide the interpretation of the meta-rules, and so on, in
