--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -135,6 +135,18 @@ Hayek praised Oakeshott, for example, in the introduction to
 knowledge, produced any in-depth commentary on the views of his purported counterpart.
 </p>
 
+<h3>
+    Previous Comparisons
+</h3>
+
+<p>
+    Kenneth Minogue
+    <br>
+    <br>
+    Chor-yung Cheung
+</p>
+
+
 <h2>
 Hayek on Rationalism
 </h2>
