Working on Hayek-Oakeshott.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -136,15 +136,45 @@ knowledge, produced any in-depth commentary on the views of his purported counte
 </p>
 
 <h3>
-    Previous Comparisons
+    Previous Comparisons of Hayek and Oakeshott
 </h3>
 
-<p>
-    Kenneth Minogue
-    <br>
-    <br>
-    Chor-yung Cheung
-</p>
+    <h4>
+        Kenneth Minogue
+    </h4>
+    <p>
+    Kenneth Minogue summed up the difference between Hayek and Oakeshott, from
+    a perspective sympathetic to the views of the latter, as follows:
+    </p>
+    <blockquote>
+    How might we formulate the difference between Hayek and Oakeshott? Let me
+    suggest that it might be done in terms of levels of scepticism. At the
+    least sceptical level, the socialist actually believes that revolutionary
+    upheaval, or some plan of social engineering, can save the world. The
+    twentieth century was full of such moths who found the flames of
+    abstraction irresistible, and many perished as a result. We are far from
+    having done away with their successors. Against this kind of thing, Hayek‘s
+    sceptical account of an economy as a ‘discovery procedure’ was
+    an exhilarating illumination of what socialist melodramas of oppression had
+    obscured. A society whose power was dispersed among all its individuals was
+    the epitome of freedom. It was also, as Hayek perhaps at times
+    overemphasized, the epitome of prosperity. At the level of proposals to
+    engineer society so as to remove the disharmonies of inequality, Hayek‘s
+    scepticism was in good working order. It was not, however, a scepticism
+    about abstract proposals in general, and it was on this point that the
+    Oakeshott-Hayek disagreement emerged. Oakeshott‘s scepticism is a
+    philosophical distancing from any form of human folly. He interprets the
+    Hobbesian account of Christianity in particular as dealing (as he puts it)
+    with ‘the local and transitory mischief in which the universal predicament
+    of mankind appeared’ in his time. Hayek is too close to the mischief to
+    recognize the universal predicament. (Minogue, 2002)
+    </blockquote>
+    </p>
+
+
+    <h4>
+        Chor-yung Cheung
+    </h4>
 
 
 <h2>
@@ -180,21 +210,21 @@ epistemology makes such knowledge possible.
     The Sensory Order
 </h3>
 
-<p>
-In <i>The Sensory Order</i>, Hayek tries to depict how thought itself, 
-which for him means abstract thought, can arise from entirely thoughtless processes.
-But he has left himself here a conundrum that I suggest is 
-impossible to solve: How in the world can any sensible abstraction 
-be drawn from a welter of particulars that are, in and of themselves, 
-not susceptible to being understood?
-</p>
-
-<p>
-Hayek's thought runs aground in this regard because he had 
-not recognized the significance of the revolution in philosophy 
-initiated by Hegel: he had not grasped the idea of the "concrete universal." 
-On the other hand, Oakeshott's critique of rationalism is based upon that very concept.
-</p>
+    <p>
+    In <i>The Sensory Order</i>, Hayek tries to depict how thought itself, 
+    which for him means abstract thought, can arise from entirely thoughtless processes.
+    But he has left himself here a conundrum that I suggest is 
+    impossible to solve: How in the world can any sensible abstraction 
+    be drawn from a welter of particulars that are, in and of themselves, 
+    not susceptible to being understood?
+    </p>
+    
+    <p>
+    Hayek's thought runs aground in this regard because he had 
+    not recognized the significance of the revolution in philosophy 
+    initiated by Hegel: he had not grasped the idea of the "concrete universal." 
+    On the other hand, Oakeshott's critique of rationalism is based upon that very concept.
+    </p>
 
 <h3>
     Hayek's Critique of Conservatism
@@ -206,17 +236,17 @@ can be taken as an implicit criticism of Oakeshott.
 </p>
 
 <p>
-Hayek opens that essay by acknowledging the genuine virtue he 
-detects in the conservative political disposition, writing, 
+Hayek opens by acknowledging the virtue he 
+detects in the conservative political stance, writing:
 "Conservatism proper is a legitimate, probably necessary, 
 and certainly widespread attitude of opposition to drastic change.
 It has, since the French Revolution, for a century and a half 
-played an important role in European politics."
+played an important role in European politics" (REF?)
 </p>
 
 <p>
-Even so, his admiration for conservatism was quite qualified.
-He continues:
+Despite this acknowlegement, he has only "two cheers" for conservatism, 
+as he continues:
 </p>
 
 <p class="blockquote">Let me now state what seems to me the decisive 
@@ -232,12 +262,12 @@ The tug of war between conservatives and progressives
 can only affect the speed, not the direction, of contemporary developments.
 But, though there is a need for a 'brake on the vehicle of progress', 
 I personally cannot be content with simply helping to apply the brake.
+(REF?)
 </p>
 
 <p>
-In a passage that quite credibly could be read as being directed 
-against political approaches such as the one Oakeshott, at times, 
-seems to endorse, Hayek contends:
+In what might plausibly read as a direct criticism of Oakeshott,
+Hayek contends:
 </p>
 
 <p class="blockquote">This brings me to the first point on which the 
@@ -252,16 +282,14 @@ disliked too rapid change in institutions and public policy;
 here the case for caution and slow process is indeed strong.
 But the conservatives are inclined to use the powers of government 
 to prevent change or to limit its rate to whatever appeals to the more timid mind.
+(REF?)
 </p>
 
 <p>
-Hayek, in the above, has indicated a crucial problem confronting 
-Oakeshottian political theory, and one that, it seems to me, 
-Oakeshott ought to have addressed in greater depth, namely, 
-that of how his endorsement of looking to the "intimations" of 
-existing practices for guiding political change can avoid taking 
-on the role of a merely providing intellectual cover for whatever 
-power structure is currently in place.
+Hayek, in the above passage, could be seen as raising the following question
+for Oakeshott: how can looking merely to the "intimations" of existing
+practice avoid providing justificatory cover for some fundamentally unjust
+political regime?
 </p>
 
 <h3>
@@ -273,13 +301,9 @@ Nevertheless, Hayek's thought grew closer to Oakeshott's over time,
 to the extent that his three-volume work from the 1970s,
 <i>Law, Legislation and Liberty</i>, often reads like an expansion
 of Oakeshott's essays on rationalism, and posits a key distinction
-between 'spontaneous orders' and 'organizations' that closely parallels Oakeshott's between 'civil' and 'enterprise' associations.
-</p>
-
-<p>
-At first glance, Hayek, by the time he is writing <i>Law, Legislation and Liberty</i>,
-sometimes seems to be echoing Oakeshott's views from
-'Rationalism in Politics', for instance, when he writes:
+between 'spontaneous orders' and 'organizations' that closely 
+parallels Oakeshott's between 'civil' and 'enterprise' associations.
+He seems particularly close to Oakeshott, for instance, when he writes:
 </p>
 
 <p class="blockquote">The first view holds that human institutions will serve human 
@@ -297,7 +321,7 @@ useful for our purposes, is largely false.
 </p>
 
 <p>
-Or this:
+And also when he says:
 </p>
 
 <p class="blockquote">Yet the basic assumption underlying the belief that man has 
@@ -317,7 +341,7 @@ explicit premises of a syllogism.
 However, even at this stage of his thought, Hayek was still, despite his 
 critique of what he calls 'constructivist rationalism', proposing 
 abstract rules to fix the problem.
-So Hayek writes something like, 'That freedom can be preserved 
+And so Hayek writes, 'That freedom can be preserved 
 only if it is treated as a supreme principle which must not 
 be sacrificed for particular advantages was fully understood by the 
 leading liberal thinkers of the nineteenth century...' (1973: 72), 
@@ -340,21 +364,13 @@ process his traditionalism argues against.
 (1988: 222)
 </p>
 
-<p>
-Oakeshott, on the other hand, never would have written up a model constitution.
-What is the source of this difference?
-I suggest they arise from even deeper differences lurking 
-beneath the surface similarity of Oakeshott's and Hayek's 
-understanding of rationalism, connected to Oakeshott's idealism.
-</p>
-
 <h3>
     The Fatal Conceit
 </h3>
 
 
 <h2>
-Oakeshott on Rationalism
+    Oakeshott on Rationalism
 </h2>
 
 <p>
@@ -392,6 +408,14 @@ In shorter form, Bernard Bosanquet wrote:
 embody itself in the finest and most specialized and
 unrepeatable responses to environment."
 -- <i>The Principle of Individuality and Value: The Gifford Lectures for 1911</i> (1927)
+<br>
+<br>
+For the British Idealists, abstract reasoning was not reasoning itself, which
+had to be opposed by some sort of "instinctual," anti-rational reliance on
+evolution to sort things out. Instead, abstract reasoning is always a partial
+and therefore defective (although perhaps very useful!) form of reason, and
+concrete reason is always its superior. And Hayek does not grapple with this
+concept of reason at all.
 
 </p>
 
