Adding On History.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -722,6 +722,43 @@ unless they are translated from their native idiom into that of practice.
     On History
 </h3>
 
+    <p>
+        <i>On History</i> is most significant for our purposes in that it
+        thoroughly refutes writers such as Gerencser (2000) who
+        contend that Oakeshott had at some point abandoned idealism for
+        skepticism. For instance, right at the beginning of the work, we find
+        Oakeshott declaring:
+    </p>
+    <blockquote> 
+        By the modality of an enquiry I mean the conditions of relevance that
+        constitute it a distinct kind of enquiry and distinguish it both from
+        an inconsequential groping around in the 
+        confusion of all the maybe going on and from similarly
+        distinct enquiries but of other kinds. These conditions of relevance
+        are of course formal, but where there are none, where there is no
+        specifiable modality, there can be no enquiry and so no consequential
+        conclusions.
+        <br>
+        <br>
+        A mode of understanding, then, is not merely an attitude or a point of
+        view. It is an autonomous manner of understanding, specifiable in
+        terms of exact conditions, which is logically incapable of denying
+        or confirming the conclusions of any other mode of understanding, or
+        indeed of making any relevant utterance in respective of it. (1999:
+        2-3)
+    </blockquote> 
+
+    <p>
+        This is, of course, just the understanding of modality Oakeshott had
+        forwarded five decades earlier. these two paragrpahs could be inserted
+        at various points in <i>Experience and Its Modes</i> without changing
+        that work's argument at all. Thus, we see that the authors who wish to
+        create an "idealist Oakeshott" and a later "skeptical Oakeshott" are
+        merely projecting their own skepticism onto a writer who at times
+        agrees with their point of view. In other wordss, they are skeptics,
+        and they wish to discover a skeptical Oakeshott, and so they do.
+    </p>
+
 
 
 <h2>
@@ -729,39 +766,39 @@ Conclusion
 </h2>
 
 
-<p>
-The key to understanding how, starting from a similar critique of rationalism,
-Hayek arrives at such a different position from Oakeshott lies,
-as mentioned above, in the fact that Oakeshott is an idealist while Hayek is not.
-Since for Oakeshott the world is a world of ideas,
-the concrete is inherently intelligible in and of its self.
-For Hayek, on the other hand, what is opposed to abstract thought is not concrete thought,
-but instinct, mechanism, or emotion.
-Writing of Hegel's statement that 'the view which clings to abstraction is liberalism,
-over which the concrete always prevails...' Hayek contends
-'he truly described the fact that we are not yet mature enough to submit 
-for any length of time to strict discipline of reason and allow our 
-emotions to constantly break through its restraints' (1973: 33),
-he fails to understand that for Hegel, as for most of the Idealists who followed him,
-concrete thought was the <i>telos</i> of reason, and not a fall from it.
-Hayek believes that the relationships that make up his 'Great Society'
-are abstract because the <i>theory</i> of such relationships is highly abstract;
-but those relationships themselves are concrete:
-<i>this</i> businessman buys <i>this</i> amount of concrete from
-<i>this</i> vendor to be delivered at <i>this</i> time and <i>this</i> place.
-For Hayek, trying to intelligently decide policies on a case-by-case
-basis will only result in irrational, emotional interventions that
-eventually will lead us down 'the road to serfdom';
-only a dogmatic insistence on classical liberal principles can preserve freedom.
-</p>
-<p>
-In short, for Hayek, the rationalist is one who does not realize that
-the single tool human reason possesses, that of abstract, theoretical reasoning,
-is not up to all tasks.
-To the contrary, Oakeshott argues that the problem itself stems from
-believing that there is only one tool available to human reason.
-The rationalist is in the position of someone using a hand saw to cut the lawn.
-</p>
+    <p>
+    The key to understanding how, starting from a similar critique of rationalism,
+    Hayek arrives at such a different position from Oakeshott lies,
+    as mentioned above, in the fact that Oakeshott is an idealist while Hayek is not.
+    Since for Oakeshott the world is a world of ideas,
+    the concrete is inherently intelligible in and of its self.
+    For Hayek, on the other hand, what is opposed to abstract thought is not concrete thought,
+    but instinct, mechanism, or emotion.
+    Writing of Hegel's statement that 'the view which clings to abstraction is liberalism,
+    over which the concrete always prevails...' Hayek contends
+    'he truly described the fact that we are not yet mature enough to submit 
+    for any length of time to strict discipline of reason and allow our 
+    emotions to constantly break through its restraints' (1973: 33),
+    he fails to understand that for Hegel, as for most of the Idealists who followed him,
+    concrete thought was the <i>telos</i> of reason, and not a fall from it.
+    Hayek believes that the relationships that make up his 'Great Society'
+    are abstract because the <i>theory</i> of such relationships is highly abstract;
+    but those relationships themselves are concrete:
+    <i>this</i> businessman buys <i>this</i> amount of concrete from
+    <i>this</i> vendor to be delivered at <i>this</i> time and <i>this</i> place.
+    For Hayek, trying to intelligently decide policies on a case-by-case
+    basis will only result in irrational, emotional interventions that
+    eventually will lead us down 'the road to serfdom';
+    only a dogmatic insistence on classical liberal principles can preserve freedom.
+    </p>
+    <p>
+    In short, for Hayek, the rationalist is one who does not realize that
+    the single tool human reason possesses, that of abstract, theoretical reasoning,
+    is not up to all tasks.
+    To the contrary, Oakeshott argues that the problem itself stems from
+    believing that there is only one tool available to human reason.
+    The rationalist is in the position of someone using a hand saw to cut the lawn.
+    </p>
 
 <h2>
 Bibliography
@@ -844,6 +881,12 @@ Franco, Paul.
 </p>
 
 <p class="biblio">
+Gerencser, Steven Anthony.
+    <i>The Skeptic’s Oakeshott</i>.
+    New York: St. Martin’s Press, 2000.
+</p>
+
+<p class="biblio">
 Hayek, F. A.
     "The Use of Knowledge in Society,"
     <i>American Economic Review</i>, 1945.
@@ -914,6 +957,12 @@ Oakeshott, Michael.
 Oakeshott, Michael.
     <i>Rationalism in Politics and Other Essays</i>.
     New York: Basic Books Pub. Co., 1962.
+</p>
+
+<p class="biblio">
+Oakeshott, Michael.
+    <i>On History and Other Essays</i>.
+    Indianapolis: Liberty Fund, 1999.
 </p>
 
 <p class="biblio">
