Changed Callahan contact info.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -25,11 +25,11 @@ Dr. Eugene Callahan
 <p class="author_info">Department of Mathematics and Computer Science
 </p>
 
-<p class="author_info">St.
-Joseph's College, Brooklyn, NY
+<p class="author_info">
+New York University
 </p>
 
-<p class="author_info">ecallahan2@sjcny.edu
+<p class="author_info">ejc369@nyu.edu
 <br>
 <br>
 
