Changed Callahan contact info.

--- a/HayekOakeshott.html
+++ b/HayekOakeshott.html
@@ -22,7 +22,8 @@
 Dr. Eugene Callahan
 </p>
 
-<p class="author_info">Department of Mathematics and Computer Science
+<p class="author_info">
+Department of Computer Science (Tandon)
 </p>
 
 <p class="author_info">
