--- a/WinchOnOakeshott.html
+++ b/WinchOnOakeshott.html
@@ -86,7 +86,7 @@ resemblance to the concept of modes in Oakeshott’s work. However, I
 will demonstrate, there is an important difference in the
 philosophical underpinnings of “forms of life” and “modes of
 experience”: Winch’s (and Wittgenstein’s?) framework is
-epistemological, while Oakeshott’s is ontological
+epistemological, while Oakeshott’s is ontological.
 Winch is trying to explain the puzzle of how, once we
 accept the subject-object dichotomy as fundamental, is it possible
 for people to act “reasonably”? With people trapped in their
