--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                     </a>
                 </h3>
 
+                <h3>
+                    <a href="IdealTypesAndHist.html">
+                        Ideal Types and the Historical Method
+                    </a>
+                </h3>
                 <br>
                 <hr>
                 <h2>
