Cleaning up html.

--- a/IdealTypesAndHist.html
+++ b/IdealTypesAndHist.html
@@ -118,7 +118,7 @@ identical. Both make use of the same logical method [i.e., ideal
 types] of forming concepts. They are different merely in the extent
 of their proximity to reality, their fullness of content, and the
 purity of their ideal-typical constructions” (Mises, 2002, <a href=
-"http://www.mises.org/epofe/c2sec3.asp">&gt;http://www.mises.org/epofe/c2sec3.asp</a>).
+"http://www.mises.org/epofe/c2sec3.asp">http://www.mises.org/epofe/c2sec3.asp</a>).
 </p>
 
 
@@ -353,7 +353,7 @@ character of Elizabethan Puritanism or of a doctrine identified as
 'civic humanism,' who unfolds 'the structure of English politics on
 the accession of George III,' or who (like Fernand Braudel)
 specifies the 'energy resources' of Europe in the late eighteenth
-century…"&gt;&nbsp; (Oakeshott, 1999: 65-66). Those are all clearly
+century…" (Oakeshott, 1999: 65-66). Those are all clearly
 examples of historical ideal types <i>a la</i> Weber.
 </p>
 
@@ -371,7 +371,7 @@ unstable level of historical understanding. It recognizes (or
 half-recognizes) what it cannot itself accommodate, and it cannot
 defend itself against being superseded by what is a genuine
 competitor, critical of it in its own terms, and thus capable of
-superseding it"&gt;&nbsp; (Oakeshott, 1999:&gt;&nbsp; 65).
+superseding it" (Oakeshott, 1999: 65).
 </p>
 
 
@@ -410,7 +410,7 @@ of its appearance upon the scene, to investigate the mediation of
 its appearance or to trace the vicissitudes of its evanescence. It
 is concerned only with correctly inferring an intelligible
 structure composed of notionally contemporaneous mutually related
-constituent occurrences"&gt;&nbsp; (Oakeshott, 1999: 65-66).
+constituent occurrences" (Oakeshott, 1999: 65-66).
 </p>
 
 
@@ -421,14 +421,14 @@ enquiry concerned to infer from record a past composed of
 situational identities: transitory passages of human engagement
 represented as patterned situations composed of mutually related
 occurrences which come and go but are here halted and made to
-gyrate in a notional interval between coming and going"&gt;&nbsp;
+gyrate in a notional interval between coming and going"
 (Oakeshott, 1999: 66). He goes on to suggest the solution to the
 difficulties he has pointed out: "And the remedy for the
 shortcomings of this level of historical understanding is not, I
 think, in doubt. It lies in an enquiry designed to assemble a past,
 not of anatomized situational identities composed of mutually
 related occurrences, but of historical events and conjunctions of
-historical events"&gt;&nbsp; (Oakeshott, 1999: 67-68).
+historical events" (Oakeshott, 1999: 67-68).
 </p>
 
 
@@ -456,7 +456,7 @@ theoreticians of history certainly will use idealizations in
 O’Neill’s sense—see, for instance, the quote from Machlup above—I
 believe that Oakeshott’s critique also applies to the use of
 abstractions beyond the level that would be required for an
-ordinary, natural language description of events.&gt;&nbsp;
+ordinary, natural language description of events.
 </p>
 
 
@@ -605,7 +605,7 @@ history would not be free of such bias, and that, as a corollary,
 actual history should try to eliminate it. (Analogously, a survey
 revealing that all works of history examined contain factual errors
 certainly would not indicate that making mistakes about facts is an
-intrinsic aspect of the historian’s research.)&gt;&nbsp;
+intrinsic aspect of the historian’s research.)
 </p>
 
 
@@ -627,7 +627,7 @@ typical, but I think sufficient, example as an illustration:
 investigated the relation of particular axes to the equation of a
 curve. He tried various transformations of axes in order to
 simplify equations, seeking a regularized procedure whereby one of
-the new axes would also be an axis of the curve.&gt;&nbsp; He was
+the new axes would also be an axis of the curve. He was
 not yet beyond fairly simply mistakes. Like the early analysts, he
 did not at first comprehend the significance of negative roots. He
 drew the cubic parabola, x<sup>3</sup> = a<sup>2</sup>y, as though
@@ -645,7 +645,7 @@ his own the central insight of analytic geometry. Already in
 September he proposed a problem to himself in the following terms:
 ‘Haveing y<sup>e</sup> nature of a crooked line expressed in
 Algebr: termes to find its axes, to determin it &amp; describe it
-geometrically &amp;c.’” (Westfall, 1980: 107)&gt;&nbsp;
+geometrically &amp;c.’” (Westfall, 1980: 107)
 </p>
 
 
@@ -738,7 +738,7 @@ and Other Social Sciences</i>, New York: Academic Press.
 <p class="biblio">Mises, L. von (1966) <i>Human Action: A Treatise
 on Economics</i>, online edition published by Ludwig von Mises
 Institute, available at: <a href=
-"http://www.mises.org/humanaction.asp">&gt;http://www.mises.org/humanaction.asp</a>.
+"http://www.mises.org/humanaction.asp">http://www.mises.org/humanaction.asp</a>.
 </p>
 
 <p class="biblio">-- (2002) <i>The Epistemological Problems of
